feat(index.html): create selection fields, button and input field

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Green Fox Fashion Web Store</title>
 </head>
 <body>
-  
+  <h1>Green Fox Fashion Web Store</h1>
+  <select name="name" id="">
+    <option value="">Select item name</option>
+  </select>
+  <select name="size" id="">
+    <option value="">Select size</option>
+  </select>
+  <input type="text">
+  <button>GET TOTAL</button>
 </body>
 </html>
