feat(frontend): creating table to the shoplanner endpoint

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Green Fox Fashion Web Store</title>
 </head>
 <body>
@@ -16,5 +17,7 @@
   </select>
   <input type="text">
   <button>GET TOTAL</button>
+  <table></table>
+  <script src="frontend.js"></script>
 </body>
 </html>
