feat(dropdown_list): creating functions in frontend to add elements to dropdown lists

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <h1>Green Fox Fashion Web Store</h1>
-  <select name="name" id="">
+  <select name="name" id="name">
     <option value="">Select item name</option>
   </select>
-  <select name="size" id="">
+  <select name="size" id="size">
     <option value="">Select size</option>
   </select>
   <input type="text">
