--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <select name="size" id="size">
     <option value="">Select size</option>
   </select>
-  <input type="text">
+  <input type="number">
   <button>GET TOTAL</button>
   <table></table>
   <script src="frontend.js"></script>
